force-app/main/default/objects/recruitment_master__c/recruitment_master__c.object-meta.xml
<CustomObject>
    <label>募集マスタ</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>募集名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>