force-app/main/default/objects/recruitment_master__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <label>部署名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>