force-app/main/default/objects/recruitment_master__c/fields/department_master__c.field-meta.xml
<CustomField>
    <fullName>department_master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>部署マスタ</label>
    <referenceTo>department_master__c</referenceTo>
    <relationshipLabel>募集マスタ</relationshipLabel>
    <relationshipName>department_master_for_recruitment_master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>