force-app/main/default/objects/recruitment_master__c/fields/employee__c.field-meta.xml
<CustomField>
    <fullName>employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>この項目に紐づく方の退職予定日が更新されたので、本レコードは作成されました。</inlineHelpText>
    <label>退職予定者（社員マスタ）</label>
    <referenceTo>employee__c</referenceTo>
    <relationshipLabel>募集マスタ</relationshipLabel>
    <relationshipName>employee</relationshipName>
    <type>Lookup</type>
</CustomField>