force-app/main/default/objects/recruitment_master__c/fields/employment_type__c.field-meta.xml
<CustomField>
    <fullName>employment_type__c</fullName>
    <label>雇用形態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1:正社員</fullName>
            </value>
            <value>
                <fullName>3:アルバイト社員</fullName>
            </value>
            <value>
                <fullName>4:派遣社員</fullName>
            </value>
            <value>
                <fullName>6:嘱託職員</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>