force-app/main/default/objects/recruitment_master__c/fields/fulfilled_employee_count__c.field-meta.xml
<CustomField>
    <fullName>fulfilled_employee_count__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>充足社員</label>
    <referenceTo>employee__c</referenceTo>
    <relationshipLabel>募集マスタ (充足社員)</relationshipLabel>
    <relationshipName>fulfilled_employee_count_for_employee</relationshipName>
    <type>Lookup</type>
</CustomField>