force-app/main/default/objects/recruitment_master__c/fields/fulfillment_date__c.field-meta.xml
<CustomField>
    <fullName>fulfillment_date__c</fullName>
    <label>充足日</label>
    <type>Date</type>
</CustomField>