force-app/main/default/objects/recruitment_master__c/fields/hr_confirmation_check__c.field-meta.xml
<CustomField>
    <fullName>hr_confirmation_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>人事確認チェック</label>
    <type>Checkbox</type>
</CustomField>