force-app/main/default/objects/recruitment_master__c/fields/hr_input_section__c.field-meta.xml
<CustomField>
    <fullName>hr_input_section__c</fullName>
    <label>人事入力欄</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>