force-app/main/default/objects/recruitment_master__c/fields/job_description_manager_section__c.field-meta.xml
<CustomField>
    <fullName>job_description_manager_section__c</fullName>
    <label>募集要項（部署長記載欄）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>