force-app/main/default/objects/recruitment_master__c/fields/parent_department_name__c.field-meta.xml
<CustomField>
    <fullName>parent_department_name__c</fullName>
    <label>上所属部署名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>