force-app/main/default/objects/recruitment_master__c/fields/recruitment_reason__c.field-meta.xml
<CustomField>
    <fullName>recruitment_reason__c</fullName>
    <label>募集理由</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>純増</fullName>
            </value>
            <value>
                <fullName>退社補充</fullName>
            </value>
            <value>
                <fullName>休職補充</fullName>
            </value>
            <value>
                <fullName>早期募集</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>