force-app/main/default/objects/recruitment_master__c/fields/recruitment_status__c.field-meta.xml
<CustomField>
    <fullName>recruitment_status__c</fullName>
    <label>募集状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>募集中</fullName>
            </value>
            <value>
                <fullName>選考中</fullName>
            </value>
            <value>
                <fullName>内定</fullName>
            </value>
            <value>
                <fullName>充足</fullName>
            </value>
            <value>
                <fullName>クローズ</fullName>
            </value>
            <value>
                <fullName>募集一時停止中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>