force-app/main/default/objects/recruitment_master__c/fields/recruitment_status_memo__c.field-meta.xml
<CustomField>
    <fullName>recruitment_status_memo__c</fullName>
    <label>募集状況　備考</label>
    <type>TextArea</type>
</CustomField>