force-app/main/default/objects/recruitment_master__c/fields/Temp_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Temp_Headcount__c</fullName>
    <description>フロー内部使用、一括作成時の人数を一時保存</description>
    <inlineHelpText>システム内部で使用する項目です。手動入力不要</inlineHelpText>
    <label>一時_募集人数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>