force-app/main/default/objects/recruitment_master__c/fields/work_locatio__c.field-meta.xml
<CustomField>
    <fullName>work_locatio__c</fullName>
    <label>勤務地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>